--- a/lms/lessons/templates/activities/detail.html
+++ b/lms/lessons/templates/activities/detail.html
@@ -1,46 +1,65 @@
-<h2>{{ lesson.name }}</h2>
-<h5>{{ lesson.description }}</h5>
+{% extends 'lessons_base.html' %}
+
+{% block content %}
+
+<h2>{{ activity.name }}</h2>
+<h5>{{ activity.description }}</h5>
 
 Tags:
 {% if tags %}    
     <ul>
     {% for tag in tags %}
-        <li> <img src="{{ tag.logo.url }}" height="16" width="16"> {{ tag.name }} </li>
+        <li> <img src="{{ tag.logo.url }}" height="40" width="40"> {{ tag.name }} </li>
     {% endfor %}
     </ul>
 {% else %}
-    <p>No tags for this lesson.</p>
+    <p>No tags for this activity.</p>
 {% endif %}
 
-Component lessons:
-{% if components %}    
-    <ul>
-    {% for component in components %}
-        <li><a href="{% url 'lessons:lesson-detail' component.id %}">{{ component.name }}</a></li>
-    {% endfor %}
-    </ul>
-{% else %}
-    <p>No component lessons are available.</p>
+{% if activity.category != "EXT" %}
+    Sub-activities:
+    {% if subs %}    
+        <ul>
+        {% for sub in subs %}
+            <li><a href="{% url 'lessons:activity-detail' sub.id %}">{{ sub.name }}</a></li>
+        {% endfor %}
+        </ul>
+    {% else %}
+        <p>No sub-activities are available.</p>
+    {% endif %}
+
+    Extensions:
+    {% if extensions %}    
+        <ul>
+        {% for extension in extensions %}
+            <li><a href="{% url 'lessons:activity-detail' extension.id %}">{{ extension.name }}</a></li>
+        {% endfor %}
+        </ul>
+    {% else %}
+        <p>No extensions are available.</p>
+    {% endif %}
+
+    Super-activities:
+    {% if supers %}    
+        <ul>
+        {% for super in supers %}
+            <li><a href="{% url 'lessons:activity-detail' super.id %}">{{ super.name }}</a></li>
+        {% endfor %}
+        </ul>
+    {% else %}
+        <p>No super-activities are available.</p>
+    {% endif %}
+
+    Related curricula:
+    {% if curricula %}    
+        <ul>
+        {% for curriculum in curricula %}
+            <li><a href="{% url 'lessons:curriculum-detail' curriculum.id %}">{{ curriculum.name }}</a></li>
+        {% endfor %}
+        </ul>
+    {% else %}
+        <p>No related curricula are available.</p>
+    {% endif %}
 {% endif %}
 
-Extension lessons:
-{% if extensions %}    
-    <ul>
-    {% for extension in extensions %}
-        <li><a href="{% url 'lessons:lesson-detail' extension.id %}">{{ extension.name }}</a></li>
-    {% endfor %}
-    </ul>
-{% else %}
-    <p>No extension lessons are available.</p>
-{% endif %}
-
-Related curricula:
-{% if curricula %}    
-    <ul>
-    {% for curriculum in curricula %}
-        <li><a href="{% url 'lessons:curriculum-detail' curriculum.id %}">{{ curriculum.name }}</a></li>
-    {% endfor %}
-    </ul>
-{% else %}
-    <p>No related curricula are available.</p>
-{% endif %}
+{% endblock content %}
