--- a/lms/templates/lessons/activity-list.html
+++ b/lms/templates/lessons/activity-list.html
@@ -1,22 +1,25 @@
-<html ng-app="activities">
-	<head lang="en">
-		<meta charset="UTF-8">
-		<link rel="stylesheet" type="text/css" href="css/bootstrap.min.css"/>
-		<title></title>
-	</head>
-	<!-- <body ng-controller="ActivityControllers as activity"> -->
-	<body ng-controller = "ActivitiesController as activities">
-		<ul class="list-group">
-			<li class="list-group-item" ng-repeat="activity in activities.activities">
-				<h3>
-					{{activity.name}}
-					<em class="pull-right">{{activitiy.price | currency}}</em>
-				</h3>
-			</li>
-			</ul>
-	<h1>Test text: {{test}}</h1>
-		<input type="text" ng-model="test"/>
-	</body>
-	<script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/angularjs/1.3.12/angular.min.js"></script>
-	<script type="text/javascript" src="js/app.js"></script>
+<!DOCTYPE html>
+{% load staticfiles %}
+<html>
+<head>
+	<link rel="stylesheet" type="text/css" href="{% static "bootstrap/css/bootstrap.css" %}">
+</head>
+<body ng-app="{% block ng_app %}lms.app.basic{% endblock %}">
+	<h1>List of activities:</h1>
+	<div class="content" ng-controller="{% block ng_controller %}AppController{% endblock %}">
+	{% block content %}
+	{% verbatim %}
+	    <div class="panel" ng-repeat="activity in activities">
+	        <div class="panel-heading clearfix">
+	            <h3 class="panel-name">{{ activity.name }}</h3>
+	        </div>
+	        <p class="well">{{ activity.description }}</p>
+	    </div>
+	{% endverbatim %}
+	{% endblock %}
+	</div>
+	<script src="{% static "js/angular/angular.js" %}"></script>
+	<script src="{% static "js/angular/angular-resource.js" %}"></script>
+	<script src="{% static "js/app-basic.js" %}"></script>
+</body>
 </html>
