added angular-route.js to activity-list.html

--- a/lms/templates/lessons/activity-list.html
+++ b/lms/templates/lessons/activity-list.html
@@ -21,6 +21,7 @@
 	</div>
 	<script src="{% static "js/angular/angular.js" %}"></script>
 	<script src="{% static "js/angular/angular-resource.js" %}"></script>
+	<script src="{% static "js/angular/angular-route.js" %}"></script>
 
 	<script src="{% static "js/app.basic.js" %}"></script>
 	<script src="{% static "js/app.resource.js" %}"></script>
