--- a/lms/templates/base.html
+++ b/lms/templates/base.html
@@ -15,6 +15,9 @@
 	<script src="{% static "js/angular/angular.js" %}"></script>
 	<script src="{% static "js/angular/angular-resource.js" %}"></script>
 
+	<script src="{% static "js/jquery.js" %}"></script>
+	<script src="{% static "bootstrap/js/bootstrap.js" %}"></script>
+
 	<script src="{% static "js/api.js" %}"></script>
 	{% endblock %}
 </body>
