implemented angular form to add curriculum and first activity

--- a/lms/templates/lessons/curriculum-list-editor.html
+++ b/lms/templates/lessons/curriculum-list-editor.html
@@ -45,7 +45,7 @@
 	    		<br>
 	    	    <div class="form-group">
 	    			<select class="form-control" ng-model="newCurriculum.activities" ng-options="activity.id as activity.name for activity in activities">
-	    				<option value=''>Activities (optional)</option>
+	    				<option value=''>First Activity</option>
                     </select>
 	    		</div>
 	    		<br>
