added Tamasin's CSS files to project

--- a/templates/base.html
+++ b/templates/base.html
@@ -3,6 +3,8 @@
 <html>
 <head>
 	<link rel="stylesheet" type="text/css" href="{% static "bootstrap/css/bootstrap.css" %}">
+	<link rel="stylesheet" type="text/css" href="{% static "css/style.css" %}">
+	<link rel="stylesheet" type="text/css" href="{% static "css/font-awesome.css" %}">
 </head>
 <body ng-app="{% block ng_app %}{% endblock %}">
 	<div class="container">
