--- a/templates/lessons/curriculum-list-editor.html
+++ b/templates/lessons/curriculum-list-editor.html
@@ -38,14 +38,9 @@
 	    		</div>
 	    		<br>
 	    		<br>
-				<div class="form-group">
-	    			<input type="number" min="1" max="200" step="1" class="form-control" ng-model="newCurriculum.length_hours" placeholder="Length (in hours)">
-	    		</div>
-	    		<br>
-	    		<br>
 	    	    <div class="form-group">
 	    			<select class="form-control" ng-model="newCurriculum.activities" ng-options="activity.id as activity.name for activity in activities">
-	    				<option value=''>First Activity</option>
+	    				<option value=''>Add Activity (Optional)</option>
                     </select>
 	    		</div>
 	    		<br>
