--- a/templates/lessons/curriculum-list-basic.html
+++ b/templates/lessons/curriculum-list-basic.html
@@ -34,6 +34,14 @@
 			</div>	
 		</div>
 	</div>
+	
+	<div class="container">
+		<span class="pull-right icon-pad-top">
+			<a href= 
+				<i class="fa fa-plus-circle fa-lg"></i>
+			</a>
+		</span>
+	</div>
 
 	{% endverbatim %}
 
