--- a/templates/base.html
+++ b/templates/base.html
@@ -14,8 +14,7 @@
 	<script src="{% static "js/angular/angular.js" %}"></script>
 	<script src="{% static "js/angular/angular-resource.js" %}"></script>
 
-	<script src="{% static "js/jquery.js" %}"></script>
-	<script src="{% static "bootstrap/js/bootstrap.js" %}"></script>
+	<script src="{% static "js/angularUI/ui-bootstrap-tpls-0.12.1.js" %}"></script>
 
 	<script src="{% static "js/api.js" %}"></script>
 	{% endblock %}
