--- a/templates/lessons/curriculum-list-basic.html
+++ b/templates/lessons/curriculum-list-basic.html
@@ -38,7 +38,7 @@
 	
 	<div class="container no-pad" class="stposition">
 		<span class="pull-right icon-pad-top">
-			<i class="btn fa fa-plus-circle fa-lg" ng-click="open()"></i>
+			<i class="btn btn-default fa fa-plus-circle fa-btn" ng-click="open()"></i>
 		</span>
 	</div>
 	
