edited angular ng-src tag for image

--- a/templates/lessons/curriculum-list-basic.html
+++ b/templates/lessons/curriculum-list-basic.html
@@ -35,7 +35,7 @@
 					</div>
 					<accordion-group id="curr-accordion-group" heading="Lessons">
 					<div class="" ng-repeat="tag in curriculum.tags">
-						<ng-src = "{{tag.logo}}">
+						<img ng-src = "{{tag.logo}}">
 					</div>
 					<div class="" ng-repeat="relationship in curriculum.activities">
 						<accordion id="activity-accordion" close-others="oneAtATime">
