--- a/static/css/style.css
+++ b/static/css/style.css
@@ -71,6 +71,10 @@ hr {
 	margin: 0px;
 }
 
+.first-element {
+	padding-top: 50px;
+}
+
 .col-center {
 	text-align: center;
 }
@@ -113,3 +117,99 @@ hr {
 
 /* Styling for AngularUI Bootstrap */
 .nav, .pagination, .carousel, .panel-title a { cursor: pointer; }
+
+/***************************
+** Tamasin's original CSS **
+***************************/
+
+/* NAV BAR */
+.navbar {
+  width: 100%;
+  max-height: 50px;
+  margin: auto;
+  border-color: #e7e7e7;
+  min-height: 45px;
+  background: #fff;
+  margin-bottom: 30px;
+  font-family: "Montserrat", sans-serif; }
+  .navbar a {
+    color: #0099cc !important;
+    font-size: 16px;
+    letter-spacing: -0.5px;
+    padding-bottom: 14px;
+    padding-top: 20px;
+    text-align: center; }
+  .navbar img {
+    width: 110px; }
+  .navbar .navbar-brand {
+    padding-top: 10px; }
+  .navbar .nav-highlight {
+    color: #cc0000 !important; }
+
+.navbar-default .navbar-collapse {
+  background: rgba(255, 255, 255, 0.85); }
+
+.footer-main {
+  background: #2b5464;
+  color: #fff;
+  border-top: 5px solid #cc0000;
+  min-height: 200px;
+  padding: 30px 0px;
+  z-index: 100;
+}
+
+ul footer-main {
+	list-style: none;
+}
+li {
+	list-style: none;
+}
+
+.navbar-default .navbar-nav > li > a:hover,
+.navbar-default .navbar-nav > li > a:focus, 
+.navbar-default .navbar-nav > .active > a,
+.navbar-default .navbar-nav > .active > a:hover,
+.navbar-default .navbar-nav > .active > a:focus {
+  color: #fff !important;
+  background-color: $primary-color !important;
+}
+
+
+/* Fix for collapsing quirk */
+
+@media (max-width:992px){
+    .navbar-header {
+        float: none;
+    }
+    .navbar-left,.navbar-right {
+        float: none !important;
+    }
+    .navbar-toggle {
+        display: block;
+    }
+    .navbar-collapse {
+        border-top: 1px solid transparent;
+        box-shadow: inset 0 1px 0 rgba(255,255,255,0.1);
+    }
+    .navbar-fixed-top {
+        top: 0;
+        border-width: 0 0 1px;
+     }
+    .navbar-collapse.collapse {
+        display: none!important;
+    }
+    .navbar-nav {
+        float: none!important;
+        margin-top: 7.5px;
+     }
+     .navbar-nav>li {
+        float: none;
+    }
+    .navbar-nav>li>a {
+        padding-top: 10px;
+        padding-bottom: 10px;
+    }
+    .collapse.in{
+        display:block !important;
+    } 
+}
