--- a/templates/lessons/curriculum-list-basic.html
+++ b/templates/lessons/curriculum-list-basic.html
@@ -7,6 +7,8 @@
 {% verbatim %}
 
 <div ng-controller="CurriculumCtrl">
+
+	<div class="first-element"></div>
 	
 	<div class="container">
 		<h1>Curriculum list
